app-deployment.yaml
# app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: shohama/build_bot:latest
        imagePullPolicy: IfNotPresent
        stdin: true
        tty: true
      imagePullSecrets:
      - name: regcred
